--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -324,6 +324,23 @@ ui bootstrap tweaks
 .uib-datepicker-popup  > li > div.uib-datepicker > table:focus {
     outline: none;
 }
+#animation_content{
+	padding: 1em;
+	#welcome_line{
+	padding: 1em;
+	display: block;
+	background: #fff;
+	margin-bottom: 10px;
+    }
+    .col{
+     width: 100%;
+     display: inline-block;
+     padding: 40px 0;
+     color: gray;
+     
+    }
+	
+}
 
 
 
