--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -332,7 +332,7 @@ ui bootstrap tweaks
 	background: #fff;
 	margin-bottom: 10px;
     }
-    .col{
+    .welcome_line_col{
      width: 100%;
      display: inline-block;
      padding: 40px 0;
